syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/ofagbola/Editor-RPM-Backend/questionnaire/pb";

message Question {
    int32 id = 1;
    string title = 2;
    string input_field = 3;
    string options = 4;
    string created_by = 5;
    google.protobuf.Timestamp created_at = 6;
}  