syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ofagbola/Editor-RPM-Backend/questionnaire/pb";

message QuestionConfig {
    int32 id = 1;
    string title = 2;
    string description = 3;
    repeated int32 questions = 4;
    string created_by = 5;
    google.protobuf.Timestamp created_at = 6;
}  